--- a/style.css
+++ b/style.css
@@ -33,17 +33,6 @@ a{
 }
 
 
-/* FOOTER */
-
-
-.footer{
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    height:72px;
-    background:#1F2937;
-    color:#E5E7EB; 
-}
 /* landing */
 .landing{
     display:flex;
@@ -85,4 +74,68 @@ p{
     color:#E5E7EB;
     font-size:18px;
 }
+/* FOOTER */
 
+
+.footer{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    height:72px;
+    background:#1F2937;
+    color:#E5E7EB; 
+}
+
+/* INFO */
+.info-con{
+    display:flex;
+    flex-direction:row;
+}
+.info{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:space-evenly;
+    gap:25px;
+    padding-bottom:90px;
+    
+
+}
+.empty-box{
+    border: 4px solid #3882F6;
+    width:150px;
+    height:150px;
+    border-radius:8px;
+}
+.text{
+    text-align:center;
+    color:#1F2937;
+    flex-wrap:wrap;
+}
+.title{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    color:#1F2937;
+    font-size:36px;
+    font-weight:700;
+    padding:60px;
+}
+/* QUOTE */
+.quote{
+    background-color:#E5E7EB;
+    padding:150px;
+}
+.cool-quote{
+    font-size:26px;
+    font-weight:200;
+}
+
+
+strong{
+    display:flex;
+    align-items:right;
+    justify-content:right;
+    font-size:23px;
+}
+/* ACTION */
