--- a/style.css
+++ b/style.css
@@ -139,3 +139,45 @@ strong{
     font-size:23px;
 }
 /* ACTION */
+.action-container{
+    border: 4px solid #3882F6;
+    width:750px;
+    height:120px;
+    border-radius:8px;
+    background-color:#3882F6;
+    display:flex;
+    justify-content:space-around;
+    padding-left:70px;
+    padding-right:70px;
+    align-items:center;
+
+}
+.action{
+    display:flex;
+    align-content:center;
+    justify-content:center;
+    margin: 70px;
+    padding:8px;
+
+}
+.action-main{
+    display:flex;
+    flex-direction:column;
+    color:#F9FAF8;
+    font-size:20px;
+}
+button{
+    justify-content:flex-end;
+    width:100px;
+    height:40px;
+    border: 1px solid #ffffff;
+    background-color:#3882F6;
+
+}
+.action-header{
+    font-weight:700;
+}
+.action-subtext{
+    font-size:16px;
+    color:#E5E7EB;
+}
