--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body{
 
 }
 /* HEADER */
+.header-button{
+    border: 1px solid #3882F6;
+}
 .header{
     background-color:#1F2937;
     display:flex;
@@ -31,6 +34,9 @@ a{
     color:#E5E7EB;
     text-decoration:none;
 }
+.header.button{
+    border-color:#3882F6;
+}
 
 
 /* landing */
@@ -44,7 +50,7 @@ a{
 .image{
     display:flex;
     height:290px;
-    width:1200px;
+    width:1100px;
     margin:40px;
     background:#767c86;
     justify-content:center;
